--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "test": "yarn run eslint && yarn run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
-    "start": "./node_modules/.bin/nodemon src/",
+    "start": "node src/",
+    "start-dev": "nodemon src/",
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
